finished Bayesian testing

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -169,3 +169,13 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   month = {February},
   address = {Paris, France},
 }
+
+@article{1995:kass-raftery,
+  author = {Robert E. Kass and Adrian E. Raftery},
+  title = {{B}ayes factors},
+  journal = {Journal of the American Statistical Association},
+  year = {1995},
+  volume = {90},
+  number = {430},
+  pages = {773--795},
+}
