changed \mode into \modus

--- a/defs.tex
+++ b/defs.tex
@@ -67,7 +67,7 @@
 \newcommand{\E}{\operatorname{E}}
 \newcommand{\V}{\operatorname{Var}}
 \newcommand{\med}{\operatorname{med}} % Median
-\newcommand{\mode}{\operatorname{mode}} % Mode
+\newcommand{\modus}{\operatorname{mode}} % Mode
 \newcommand{\logit}{\operatorname{logit}} % Mode
 
 \def\El{\ul{\E}}
