--- a/intro.tex
+++ b/intro.tex
@@ -473,7 +473,7 @@ often abbreviated as MAP (maximum a posteriori) estimator
 (see, e.g., \cite[\S 5.1.5, p.~257]{2000:bernardosmith}, or \cite[\S 4.1.2, p.~166]{2007:robert}).
 For a $\be(\nn\yn, \nn(1-\yn))$, the mode is
 \begin{align*}
-\mode p(\theta\mid\nn, \yn) &= \frac{\nn\yn - 1}{\nn - 2} = \frac{\nz\yz - 1 + s}{\nz - 2 + n}\,,
+\modus p(\theta\mid\nn, \yn) &= \frac{\nn\yn - 1}{\nn - 2} = \frac{\nz\yz - 1 + s}{\nz - 2 + n}\,,
 \end{align*}
 and thus is a weighted average of the prior mode $\frac{\nz\yz - 1}{\nz -2}$ $(\nz > 2)$
 and the sample proportion $s/n$, with weights $\nz - 2$ and $n$, respectively.
