diss: small typo

--- a/intro.tex
+++ b/intro.tex
@@ -790,7 +790,7 @@ This will also motivate the use of sets of prior distributions.
 \label{sec:commoncause}
 
 In reliabilty analysis of systems with redundant components,
-\emph{common-cause failure} refers to simultaneous failure of several redunant components due to a common or shared root cause,
+\emph{common-cause failure} refers to simultaneous failure of several redundant components due to a common or shared root cause,
 like extreme environmental conditions (e.g., fire, flood, or earthquake) \cite[p.~325]{1994:hoyland}.
 It has been recognized as the dominant factor to the unreliability of redundant systems,
 and its modeling has become an important part of reliability analysis
