--- a/talk/beamerthemeLMU.sty
+++ b/talk/beamerthemeLMU.sty
@@ -3,6 +3,7 @@
 
 % Copyright 2003 by Till Tantau <tantau@users.sourceforge.net>
 % Modified by Rainer Opgen-Rhein
+% Modified by Gero Walter
 
 % This program can be redistributed and/or modified under the terms
 % of the GNU Public License, version 2.
@@ -93,6 +94,6 @@
 \setbeamercolor*{titlelike}{parent=structure}
 \setbeamercolor*{palette quaternary}{fg=white,bg=black!25!white}
 
-
+\setbeamersize{text margin left=1em,text margin right=1em}
 \mode
 <all>
