talk: more slides from Matthias, colors changed in template

--- a/talk/beamerthemeLMU.sty
+++ b/talk/beamerthemeLMU.sty
@@ -93,6 +93,10 @@
 \usecolortheme[RGB={0,140,84}]{structure}
 \setbeamercolor*{titlelike}{parent=structure}
 \setbeamercolor*{palette quaternary}{fg=white,bg=black!25!white}
+\setbeamercolor{block title}{bg=black!20!white}
+\setbeamercolor{block title alerted}{bg=black!20!white}
+\setbeamercolor{block title example}{bg=black!20!white}
+\setbeamercolor{alerted text}{fg=yellow!60!red}
 
 \setbeamersize{text margin left=1em,text margin right=1em}
 \mode
